--- a/css/style.css
+++ b/css/style.css
@@ -9,11 +9,16 @@ body {
   font-family: 'Montserrat', sans-serif;
 }
 
+.wrapper {
+  width: 100%;
+  height: 100vh;
+}
+
 h1, h2, h3, h4 {
   color: #FFF;
 }
 
-.clearfix::after {
+main::after {
   content: '';
   display: table;
   clear: both;
@@ -21,15 +26,17 @@ h1, h2, h3, h4 {
 
 main .aside-bar .aside-menu ul li a:hover,
 main .aside-bar .playlists ul li a:hover,
-main .main-covers nav ul li a:hover {
+main .main-covers nav ul li a:hover,
+main .aside-bar .aside-bar-bottom a:hover {
   color: #FFF
 }
-
+main .aside-bar .playlists ul li a.add:hover::before {
+  background-color: #FFF;
+}
 
 /* MAIN */
 main {
   height: calc(100vh - 90px);
-  
 }
 
 /* ASIDE BAR */
@@ -37,13 +44,18 @@ main .aside-bar {
   float: left;
   width: 200px;
   height: 100%;
-  padding: 20px 20px;
+  padding-top: 20px;
   background-color: #000;
+}
+
+main .aside-bar .aside-bar-top {
+  height: calc(100% - 80px);
 }
 
 main .aside-bar .logo {
   width: 80%;
-  padding-bottom: 20px;
+  padding-left: 20px;
+  height: 90px;
 }
 
 main .aside-bar .logo img {
@@ -51,10 +63,12 @@ main .aside-bar .logo img {
 }
 
 /* ASIDE MENU */
+
 main .aside-bar .aside-menu ul li {
   height: 30px;
   width: 100%;
   display: inline-block;
+  padding-left: 20px;
 }
 
 main .aside-bar .aside-menu ul li a {
@@ -83,13 +97,17 @@ main .aside-bar .aside-menu ul li a img {
 }
 
 /* ASIDE PLAYLISTS */
-main .aside-bar .playlists {
-  padding-top: 20px;
+main .aside-bar .playlists ul {
+  height: 200px;
   overflow-y: auto;
+  padding-left: 20px;
+  list-style: none;
 }
 
 main .aside-bar .playlists h3 {
   text-transform: uppercase;
+  padding-top: 20px;
+  padding-left: 20px;
   font-size: 90%;
   margin-bottom: 15px;
 }
@@ -104,36 +122,75 @@ main .aside-bar .playlists ul li a {
   font-size: 90%;
 }
 
-main .aside-bar .playlists ul li a .add {
-  display: flex;
+main .aside-bar .playlists ul li a.add::before {
+  content: '+';
   height: 40px;
   width: 40px;
-  justify-content: center;
-  align-items: center;
-  font-size: 40px;
-  background-color: #A3A3A3;
-  color: #000;
   margin-right: 10px;
+  color: #000;
+  font-size: 40px;
+  line-height: 40px;
+  text-align: center;
+  background-color: #6D6D6D;
 }
 
 /* ASIDE PROFILE */
-/* main .aside-bar .profile {
+main .aside-bar .aside-bar-bottom {
   height: 80px;
-  background-color: aqua;
-} */
+  width: 200px;
+  padding: 0 20px;
+  background-color: #000;
+}
+
+main .aside-bar .aside-bar-bottom a{
+  text-decoration: none;
+  color: #6D6D6D;
+  font-size: 80%;
+  font-weight: 600;
+}
+
+
+main .aside-bar .aside-bar-bottom .install {
+  display: flex;
+  align-items: center;
+  flex-wrap: nowrap;
+  width: 100%;
+  padding-bottom: 10px;
+  border-bottom: 1px solid #6D6D6D;
+}
+
+main .aside-bar .aside-bar-bottom .install img {
+  height: 15px;
+  padding-right: 5px;
+}
+
+main .aside-bar .aside-bar-bottom .profile {
+  display: flex;
+  align-items: center;
+  flex-wrap: nowrap;
+  width: 100%;
+  padding-top: 10px;
+}
+
+main .aside-bar .aside-bar-bottom .profile img {
+  height: 20px;
+  width: 20px;
+  background-color: #6D6D6D;
+  border-radius: 50%;
+  margin-right: 5px;
+}
 
 /* COVERS */
-main .main-covers {
+main .main-container {
+  float: left;
   background-color: #141922;
   width: calc(100% - 200px);
   height: 100%;
   overflow-y: auto;
 }
 
-main .main-covers .call-to-action {
+main .main-container .call-to-action {
   position: fixed;
-  top: 0;
-  right: 0;
   width: calc(100% - 200px);
   height: 90px;
   padding-right: 40px;
@@ -157,7 +214,7 @@ main .main-covers .call-to-action {
   transform: scale(1.1);
 }
 
-main .main-covers nav {
+main .main-container nav {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -166,14 +223,14 @@ main .main-covers nav {
   margin-top: 90px;
 }
 
-main .main-covers nav ul {
+main .main-container nav ul {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
   list-style: none;
 }
 
-main .main-covers nav ul li a {
+main .main-container nav ul li a {
   position: relative;
   padding: 5px 15px;
   text-transform: uppercase;
@@ -183,7 +240,7 @@ main .main-covers nav ul li a {
   color: #7F8387;
 }
 
-main .main-covers nav ul li a.active::after  {
+main .main-container nav ul li a.active::after  {
   content: '';
   position: absolute;
   width: 25%;
@@ -194,7 +251,7 @@ main .main-covers nav ul li a.active::after  {
   background-color: #B7FF33;
 }
 
-main .main-covers .debug-content {
+main .main-container .debug-content {
   width: 100%;
   padding:30px;
   color: #FFF;
@@ -202,29 +259,57 @@ main .main-covers .debug-content {
 
 
 /* FOOTER */
-footer {
+footer .player {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   height: 90px;
+  padding: 10px;
   background-color: #282828;
 }
 
-footer .song-info,
-footer .volume {
+footer .player-song,
+footer .player-volume {
   width: 200px;
   height: 100%;
-  background-color: blueviolet;
 }
 
-footer .song-info {
-  flex-shrink: 2;
-}
-
-footer .volume {
+footer .player-song .song-img {
+  width: 22%;
+  margin-right: 10px;
   flex-shrink: 0;
 }
 
-footer .player {
+footer .player-song .song-img img {
+  width: 100%;
+}
+
+footer .player-song .song-info p {
+  font-size: 85%;
+  color: #6D6D6D;
+}
+
+footer .player-song .song-commands {
+  color: #6D6D6D;
+  margin-left: 20px;
+}
+
+footer .player-song .song-commands i {
+  padding: 0 2px;
+}
+
+footer .player-song {
+  display: flex;
+  align-items: center;
+  font-size: 80%;
+  flex-shrink: 2;
+}
+
+footer .plyer-volume {
+  flex-shrink: 0;
+}
+
+footer .player-control {
   width: 60%;
   height: 100%;
   flex-shrink: 1;
@@ -237,11 +322,9 @@ footer .player {
     width: 50px;
   }
 
-  main .main-covers {
+  main .main-container,
+  main .main-container .call-to-action {
     width: calc(100% - 50px);
   }
 
-  main .main-covers .call-to-action {
-    width: calc(100% - 50px);
-  }
 }
