--- a/css/style.css
+++ b/css/style.css
@@ -25,12 +25,12 @@ main::after {
 }
 
 main .aside-bar .aside-menu ul li a:hover,
-main .aside-bar .playlists ul li a:hover,
+main .aside-bar .aside-playlists ul li a:hover,
 main .main-covers nav ul li a:hover,
 main .aside-bar .aside-bar-bottom a:hover {
   color: #FFF
 }
-main .aside-bar .playlists ul li a.add:hover::before {
+main .aside-bar .aside-playlists ul li a.add:hover::before {
   background-color: #FFF;
 }
 
@@ -44,26 +44,20 @@ main .aside-bar {
   float: left;
   width: 200px;
   height: 100%;
-  padding-top: 20px;
-  background-color: #000;
 }
 
 main .aside-bar .aside-bar-top {
   height: calc(100% - 80px);
+  background-color: blue;
+  overflow: hidden;
 }
 
-main .aside-bar .logo {
-  width: 80%;
-  padding-left: 20px;
-  height: 90px;
+main .aside-bar .aside-bar-top .logo-img {
+  padding:20px;
 }
 
-main .aside-bar .logo img {
-  width: 100%;
-}
 
 /* ASIDE MENU */
-
 main .aside-bar .aside-menu ul li {
   height: 30px;
   width: 100%;
@@ -97,32 +91,31 @@ main .aside-bar .aside-menu ul li a img {
 }
 
 /* ASIDE PLAYLISTS */
-main .aside-bar .playlists ul {
-  height: 200px;
-  overflow-y: auto;
-  padding-left: 20px;
+main .aside-bar .aside-bar-top .aside-playlists {
+  padding: 20px;
+}
+
+main .aside-bar .aside-bar-top .aside-playlists ul {
   list-style: none;
+  padding-top: 10px;
+  overflow-y: auto;
 }
 
-main .aside-bar .playlists h3 {
-  text-transform: uppercase;
-  padding-top: 20px;
-  padding-left: 20px;
-  font-size: 90%;
-  margin-bottom: 15px;
+main .aside-bar .aside-playlists ul li {
+  width: 100%;
+  padding-top: 10px;
 }
 
-main .aside-bar .playlists ul li a {
+main .aside-bar .aside-playlists ul li a {
   display: flex;
   align-items: center;
   text-decoration: none;
   color: #6D6D6D;
   font-weight: 600;
-  padding: 7px 0;
   font-size: 90%;
 }
 
-main .aside-bar .playlists ul li a.add::before {
+main .aside-bar .aside-playlists ul li a.add::before {
   content: '+';
   height: 40px;
   width: 40px;
@@ -138,46 +131,8 @@ main .aside-bar .playlists ul li a.add::before {
 main .aside-bar .aside-bar-bottom {
   height: 80px;
   width: 200px;
-  padding: 0 20px;
-  background-color: #000;
-}
-
-main .aside-bar .aside-bar-bottom a{
-  text-decoration: none;
-  color: #6D6D6D;
-  font-size: 80%;
-  font-weight: 600;
-}
-
-
-main .aside-bar .aside-bar-bottom .install {
-  display: flex;
-  align-items: center;
-  flex-wrap: nowrap;
-  width: 100%;
-  padding-bottom: 10px;
-  border-bottom: 1px solid #6D6D6D;
-}
-
-main .aside-bar .aside-bar-bottom .install img {
-  height: 15px;
-  padding-right: 5px;
-}
-
-main .aside-bar .aside-bar-bottom .profile {
-  display: flex;
-  align-items: center;
-  flex-wrap: nowrap;
-  width: 100%;
-  padding-top: 10px;
-}
-
-main .aside-bar .aside-bar-bottom .profile img {
-  height: 20px;
-  width: 20px;
-  background-color: #6D6D6D;
-  border-radius: 50%;
-  margin-right: 5px;
+  
+  background-color: #B7FF33;
 }
 
 /* COVERS */
