--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ body {
   height: 100vh;
 }
 
-h1, h2, h3, h4 {
+h1, h2, h3, h4, h5 {
   color: #FFF;
 }
 
@@ -57,14 +57,10 @@ main .aside-bar .aside-bar-top {
 
 main .aside-bar .aside-bar-top .logo-img {
   padding:20px;
-  flex-shrink: 0;
 }
 
 
 /* ASIDE MENU */
-main .aside-bar .aside-menu {
-  flex-shrink: 0;
-}
 
 main .aside-bar .aside-menu ul li {
   height: 30px;
@@ -100,17 +96,22 @@ main .aside-bar .aside-menu ul li a img {
 
 /* ASIDE PLAYLISTS */
 main .aside-bar .aside-bar-top .aside-playlists {
-  padding: 20px;
-  max-height: 260px;
-  flex-shrink: 1;
+  padding-top: 20px;
+  padding-left: 20px;
   max-height: 100%;
-  overflow-y: auto;
+  overflow-y: hidden;
+}
+
+main .aside-bar .aside-bar-top .aside-playlists h3 {
+  text-transform: uppercase;
+  font-size: 100%;
 }
 
 main .aside-bar .aside-bar-top .aside-playlists ul {
   list-style: none;
-  padding-top: 10px;
-  
+  padding-top: 5px;
+  max-height: 90%;
+  overflow-y: auto;
 }
 
 main .aside-bar .aside-playlists ul li {
@@ -143,7 +144,52 @@ main .aside-bar .aside-playlists ul li a.add::before {
 main .aside-bar .aside-bar-bottom {
   height: 80px;
   width: 200px;
-  background-color: #B7FF33;
+  background-color: #000;
+}
+
+main .aside-bar .aside-bar-bottom {
+  height: 80px;
+  width: 200px;
+  padding-top: 10px;
+  padding-left: 20px;
+}
+
+main .aside-bar .aside-bar-bottom a{
+  text-decoration: none;
+  color: #6D6D6D;
+  font-size: 80%;
+  font-weight: 600;
+}
+
+
+main .aside-bar .aside-bar-bottom .install {
+  display: flex;
+  align-items: center;
+  flex-wrap: nowrap;
+  width: 100%;
+  padding-bottom: 10px;
+  border-bottom: 1px solid #6D6D6D;
+}
+
+main .aside-bar .aside-bar-bottom .install img {
+  height: 15px;
+  padding-right: 5px;
+}
+
+main .aside-bar .aside-bar-bottom .profile {
+  display: flex;
+  align-items: center;
+  flex-wrap: nowrap;
+  width: 100%;
+  padding-top: 10px;
+}
+
+main .aside-bar .aside-bar-bottom .profile img {
+  height: 20px;
+  width: 20px;
+  background-color: #6D6D6D;
+  border-radius: 50%;
+  margin-right: 5px;
 }
 
 /* COVERS */
@@ -236,8 +282,47 @@ footer .player {
 
 footer .player-song,
 footer .player-volume {
+  display: flex;
+  align-items: center;
+  color: #FFF;
   width: 200px;
+  min-width: 130px;
   height: 100%;
+}
+
+footer .progress {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  width: 20%;
+  height: 3px;
+  border-radius: 1.5px;
+  background-color: #FFF;
+}
+
+footer .progress:hover {
+  background-color: #B7FF33;
+}
+
+footer .progress:hover .dot {
+  display: block;
+}
+
+.progress .dot {
+  display: none;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background-color: #FFF;
+}
+
+/* PLAYER-SONG */
+footer .player-song {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  font-size: 80%;
+  flex-shrink: 2;
 }
 
 footer .player-song .song-img {
@@ -250,12 +335,19 @@ footer .player-song .song-img img {
   width: 100%;
 }
 
+footer .player-song .song-info p,
+footer .player-song .song-info h4 {
+  text-overflow: ellipsis;
+}
+
 footer .player-song .song-info p {
   font-size: 85%;
   color: #6D6D6D;
 }
 
 footer .player-song .song-commands {
+  flex-wrap: wrap;
+  flex-direction: column;
   color: #6D6D6D;
   margin-left: 20px;
 }
@@ -264,22 +356,79 @@ footer .player-song .song-commands i {
   padding: 0 2px;
 }
 
-footer .player-song {
-  display: flex;
-  align-items: center;
-  font-size: 80%;
-  flex-shrink: 2;
+footer .player-song .song-commands i:hover {
+  cursor: pointer;
+  color: #FFF;
 }
 
-footer .plyer-volume {
+/* PLAYER-VOLUME */
+footer .player-volume {
   flex-shrink: 0;
+  font-size: 80%;
+  justify-content: center;
 }
 
+footer .player .player-volume i {
+  padding: 0 5px;
+}
+
+footer .player .player-volume .volume-bar {
+  width: 50%;
+  height: 3px;
+  border-radius: 1.5px;
+  margin-left: 5px;
+  background-color: #6D6D6D;
+}
+
+/* PLAYER-CONTROL */
 footer .player-control {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
   width: 60%;
   height: 100%;
+  padding: 0 10px;
   flex-shrink: 1;
-  background-color: bisque;
+}
+
+footer .player-control .control-commands {
+  display: flex;
+  align-items: center;
+}
+
+footer .player-control .control-commands i {
+  padding: 0 7px;
+  color: #FFF;
+}
+
+footer .player-control .control-commands i.far {
+  font-size: 150%;
+}
+
+footer .player-control .control-commands i.far:hover {
+  cursor: pointer;
+  transform: scale(1.2);
+}
+
+footer .player-control .time-and-space {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+footer .player-control .time-and-space span {
+  color: #FFF;
+  font-size: 60%;
+}
+
+footer .player-control .player-bar {
+  width: 60%;
+  height: 3px;
+  border-radius: 1.5px;
+  background-color: #6D6D6D;
+  margin: 0 20px;
 }
 
 /* MEDIA */
